--- a/docs/catalog/legacy.mdx
+++ b/docs/catalog/legacy.mdx
@@ -5,3 +5,56 @@ hide_table_of_contents: true
 ---
 
 # Legacy
+
+These boards have served well and are only listed here for users who already own these products. 
+
+:::note
+Technical support for these legacy device is limited!
+:::
+
+---
+
+## Arcade V2
+
+
+![BrainPad Classic](pathname:///img/catalog/arcade-v2.jpg)
+
+BrainPad Arcade V2 is identical to V3, except for the addition of DUELink connector. It also includes the standard mounting holes specified by the DUELink specifications. All current instructions work, except for DUELink.
+
+V2 added Jacdac connector and gave the board a nicer shape than V1.
+
+---
+
+## Arcade V1
+
+![BrainPad Classic](pathname:///img/catalog/arcade-v1.jpg)
+
+BrainPad Arcade V1 was a joint effort with Microsoft MakeCode team, to be the very first MakeCode Arcade device on the market. All instructions are compatible with V1, except no DUELink and no Jacdac connections.
+
+---
+
+## Edge Connector
+
+![BrainPad Classic](pathname:///img/catalog/pulse.png)
+
+A few boards were designed to utilize the micro:bit edge connector. These were discontinued in favor of using DUELink.
+
+<Button
+  style={{ margin: "10px" }}
+  label="BrainPad with Edge Connector"
+  link="edge-connector"
+/>
+
+---
+
+## Classic
+
+![BrainPad Classic](pathname:///img/catalog/classic.png)
+
+The BrainPad Classic brings all inputs and outputs on a single circuit board.
+
+<Button
+  style={{ margin: "10px" }}
+  label="BrainPad Classic"
+  link="classic"
+/>
