--- a/docs/catalog/arcade-v3.mdx
+++ b/docs/catalog/arcade-v3.mdx
@@ -4,4 +4,118 @@ pagination_prev: null
 hide_table_of_contents: true
 ---
 
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+import React from "react";
+import Zoom from "react-medium-image-zoom";
+import "react-medium-image-zoom/dist/styles.css";
+
 # Arcade V3
+
+
+<div style={{ textAlign: "center" }}>
+
+<Zoom>
+<img alt="Main" width="75%" src="/img/catalog/arcade-v3-front.jpg" />
+</Zoom>
+
+  <table>
+    <td>
+      <Zoom>
+        <img alt="Back" src="/img/catalog/arcade-v3-back.jpg" />
+      </Zoom>
+    </td>
+    <td>
+      <Zoom>
+        <img alt="Size" src="/img/catalog/arcade-v3-clip.jpg" />
+      </Zoom>
+    </td>
+    <td>
+      <Zoom>
+        <img alt="Front" src="/img/catalog/arcade-v3-front45.jpg" />
+      </Zoom>
+    </td>
+    <td>
+      <Zoom>
+        <img alt="Back" src="/img/catalog/arcade-v3-packaging.png" />
+      </Zoom>
+    </td>
+  </table>
+  <p>**BrainPad Arcade V3 Microcomputer**</p>
+</div>
+
+
+
+---
+
+“Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
+<table><td width='50%'>
+**Key features**
+• Microsoft MakeCode Arcade Ready.<br/>
+• 1.8″ 160×120 Color Display.<br/>
+• Jacdac Connector.<br/>
+• DUELink Connector.<br/>
+• Alligator-Clip Pads to Connect Circuits.<br/>
+• Buzzer Speaker.<br/>
+• 8x User Buttons.<br/>
+• Includes USB Cable.<br/>
+• Includes Carrying Case.<br/>
+</td><td width='50%'>
+**Resources**
+
+📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
+🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+</td></table>
+<div class="videocontainer">
+    <iframe class="responsive-width" 
+        src="https://www.youtube.com/embed/0nTYkD6aCSc" 
+        frameborder="0"
+        allowfullscreen>
+    </iframe>
+</div>
+
+---
+
+## MakeCode Arcade
+
+![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
+
+Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python.
+
+---
+## Create and Play!
+
+![Falling Duck](pathname:///img/falling-duck.gif)
+
+Download finished games to the BrainPad Arcade over USB, and play them on the hand-held device.
+
+![Falling Duck Play](pathname:///img/arcade-duck-play.jpg)
+
+---
+
+## Power On-the-go!
+
+BrainPad Arcade can be powered using any phone charger or power bank.
+
+image
+
+The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
+
+![Falling Duck Play](pathname:///img/catalog/brainpower-arcade-front45.jpg)
+
+---
+
+<p
+  style={{
+    backgroundColor: "orange",
+    color: "black",
+    padding: "0px 0px 0px 30px",
+  }}
+>
+  ## Ordering Info
+</p>
+
+| Description | Part Number | Price  |
+| ----------- | ----------- | ------ |
+| Arcade Gaming Microcomputer   | BPC-ARCADE-AR2B | $39.95 |
+
