--- a/docs/start/blocks.mdx
+++ b/docs/start/blocks.mdx
@@ -1,7 +1,6 @@
 ---
 pagination_next: null
 pagination_prev: null
-hide_table_of_contents: true
 ---
 
 import Tabs from "@theme/Tabs";
@@ -9,5 +8,42 @@ import TabItem from "@theme/TabItem";
 
 # Block Coding
 
+Microsoft MakeCode Arcade goes hand in hand with BrainPad Arcade to create an exciting coding learning platform for building games. Not only that, it goes beyond games to build smart electronic systems with its connectivity options.
+
+
+![Block Coding](pathname:///img/block-coding.jpg)
+
 ---
+
+## Plug it in
+
+To get going with the BrainPad Arcade, let’s try programming it to show a pizza sprite on the screen. Go ahead and plug the BrainPad Arcade into your computer and follow the steps below.
+
+![USB Insert](pathname:///img/arcade-usb-insert.gif)
+
+## Build the Program
+
+Go to https://arcade.makecode.com/ and click on start a new project (where the large plus sign is).
+
+Then, click on Sprites and then drag the Set sprite block to the green “on start” block on the main screen. Change the sprite to whatever you like from the gallery or draw your own.
+
+![Add Blocks](pathname:///img/arcade-add-blocks.gif)
+
+If the simulator is not “playing”, click the play button and now you will see the sprite you added in the middle of the simulator’s screen.
+
+## Prep the Device
+
+![Virtual Drive](pathname:///img/arcade-virtual-drive.jpg)
+
+After you connected the BrainPad Arcade earlier, your PC should have detected a new drive, called “ARCADE-F4”. If it didn't, press reset on the board and then it will. Every time you press reset the board will cycle between the mode to load files, if connected to a PC.
+
+# Download the Games
+
+Click download and save the file on the “ARCADE-F4” drive. The Green light will flash for a moment and the BrainPad will make the same sound you heard on the computer earlier. If you are using the Chrome browser, it is possible to sync the board so the file will download automatically to your board.
+
+If you are using the Chrome browser, you may get prompted to sync your device. This will allow to you to download the file directly onto the device.
+
+---
+
+## Lessons
 
