--- a/docs/start/duelink.mdx
+++ b/docs/start/duelink.mdx
@@ -1,7 +1,6 @@
 ---
 pagination_next: null
 pagination_prev: null
-hide_table_of_contents: true
 ---
 
 import Tabs from "@theme/Tabs";
@@ -9,5 +8,39 @@ import TabItem from "@theme/TabItem";
 
 # DUELink
 
+[DUELink](https://www.duelink.com/) ecosystem consists of hundreds of module that can easily interconnect.
+
+## Overview
+
+![DUELink Overview](pathname:///img/duelink-overview.png)
+
+
+A tiny cable-connector is used to daisy-link these modules into a "link".
+
+![DUELink Uplink Downlink](pathname:///img/duelink-uplink-downlink.png)
+
+BrainPad Arcade can access this daisylink using the included wires.
+
+![DUELink daisylink](pathname:///img/duelink-daisylink.png)
+
+The provided MakeCode Arcade extension includes everything you need to access the modules using blocks.
+
 ---
 
+## Adding the Extension
+
+---
+
+## Controlling Outputs
+
+Using the extension, controlling modules is as simple as adding a sprite on the screen!
+
+---
+
+## Reading Inputs
+
+Also similar to outputs, reading inputs is an simple use of blocks.
+
+---
+
+## Lessons
