--- a/docs/start/javascript.mdx
+++ b/docs/start/javascript.mdx
@@ -1,7 +1,6 @@
 ---
 pagination_next: null
 pagination_prev: null
-hide_table_of_contents: true
 ---
 
 import Tabs from "@theme/Tabs";
@@ -9,4 +8,19 @@ import TabItem from "@theme/TabItem";
 
 # JavaScript
 
+![JavaScript](pathname:///img/arcade-javascript.png)
+
+JavaScript is the number one language used in building smart and dynamic websites. Just like with Python, Microsoft MakeCode Arcade includes JavaScript, simplifying the learning curve.
+
+
 ---
+
+## Hello World!
+
+---
+
+## Using Variables
+
+---
+
+## Lessons
