--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,7 +11,17 @@ We offer coding platform with an enhanced technological learning experience that
 
 BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY</strong>. Understanding <strong>CODE</strong> is essential to <strong>EXCEL</strong> in this digitally transformed era.
 
+<p
+  style={{
+    backgroundColor: "orange",
+    color: "black",
+    padding: "10px 0px 1px 0px",
+  }}
+>
 # PLAY | CODE | EXCEL
+</p>
+
+
 
 Combining circuits in teaching allows learners to develop hands-on skills in addition to using critical thinking, logic, and analytics.
 
@@ -35,7 +45,7 @@ To give everyone the necessary skills required to understand the ever-growing ne
 
 ![About Mission](pathname:///img/about-mission.jpg)
 
-To make the BrainPad the smartest coding platform and make programming gratifying and accessible to all learners and educators.
+To make programming gratifying and accessible to all learners and educators.
 
 ---
 
@@ -45,7 +55,7 @@ To make the BrainPad the smartest coding platform and make programming gratifyin
 
 We are proud to have perfected the BrainPad in our USA headquarters, where we provide the highest level of quality and user support. 
 
-![GHI Electronics Logo](pathname:///img/GHI-elec-logo.jpg)
+![GHI Electronics Logo](pathname:///img/ghi-elec-logo.jpg)
 
 Our parent company GHI Electronics is a commercial engineering and manufacturing company in Michigan, USA.
 
