--- a/src/pages/services.mdx
+++ b/src/pages/services.mdx
@@ -7,49 +7,53 @@ hide_table_of_contents: true
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
-What is more exciting to coding-learners than to get hands-on with technology? Move a robot, make a video game, blink lights, and do much more! We can tell you more, but let us show you instead.
+What is more exciting to coding-learners than to get hands-on with technology? Move a robot, make a video game, blink lights, and do much more!
+
+![Service Workshop](pathname:///img/learn-to-code-things.png)
+
+We can tell you more, but let us show you instead!
 
 ---
-
-![Service Workshop](pathname:///img/service-workshop.png)
 
 # Bootcamps and Workshops
 
-Innovation Bootcamp and workshops are customizable coding programs that can be adjusted to meet your STEM initiatives.
+![Service Workshop](pathname:///img/service-workshop.png)
+
+Innovation Bootcamps and Workshops are customizable coding-programs that can be adjusted to meet your STEM initiatives.
 
 The program is designed based on:
 
-Customized time-period (day, week, semester)<br/>
-STEM topic integration<br/>
-Student count<br/>
-Virtual, on-site, or hybrid<br/>
-Coding language choice<br/>
-BrainPad electronics set for students to use and keep<br/>
-BrainPad course completion certificate for each student<br/>
+💡Customized time-period (day, week, semester).💡<br/>
+💡STEM topic integration.💡<br/>
+💡Student count.💡<br/>
+💡Virtual, on-site, or hybrid.💡<br/>
+💡Coding language choice.💡<br/>
+💡BrainPad electronics set for students to use and keep.💡<br/>
+💡BrainPad course completion certificate for each student.💡<br/>
 
 ---
 
-![Service Hackathon](pathname:///img/service-hackathon.png)
-
 # Coding Hackathons
+
+![Service Hackathon](pathname:///img/service-hackathon.png)
 
 Bring more excitement and challenge your students with hackathons. These events typically include quick sessions on one of the many topics covered by BrainPad (Robots, Games, Circuits, AI, and IoT) and then followed by a competition to highlight the top accomplishments.
 
 ---
 
-![Service Teacher Training](pathname:///img/service-teacher-training.png)
-
 # Teacher Training
+
+![Service Teacher Training](pathname:///img/service-teacher-training.png)
 
 Equip your educators with the skills and knowledge to integrate STEM education seamlessly into your school curriculum. Our Train-the-Trainer program empowers teachers with the expertise needed to inspire the next generation of innovators.
 
 ---
 
-![Coding for All](pathname:///img/coding-for-all.jpg)
-
 # Coding For All
 
-“Tomorrow’s greatest ideas will STEM from the digital knowledge we plant today.” – BrainPad founder, Gus Issa
+![Coding for All](pathname:///img/coding-for-all.jpg)
+
+“Tomorrow’s greatest ideas will STEM from the digital knowledge we plant today.” - BrainPad founder, Gus Issa.
 
 <Button
   style={{ margin: "10px" }}
