--- a/docs/start/python.mdx
+++ b/docs/start/python.mdx
@@ -1,7 +1,6 @@
 ---
 pagination_next: null
 pagination_prev: null
-hide_table_of_contents: true
 ---
 
 import Tabs from "@theme/Tabs";
@@ -9,5 +8,18 @@ import TabItem from "@theme/TabItem";
 
 # Python
 
+![Python](pathname:///img/arcade-python.png)
+
+
+Python is the fastest growing language today. Traditionally, the setup for Python and its use can be a bit challenging for younger audience. Microsoft MakeCode Arcade simplifies this by adding a block to python code translator.
+
+## Hello World!
+
 ---
+
+## Using Variables
+
+---
+
+## Lessons
 
