--- a/src/pages/partners.mdx
+++ b/src/pages/partners.mdx
@@ -3,8 +3,9 @@ title: Partners
 hide_table_of_contents: true
 ---
 
-Our common goal technology partnerships reach across a broad range of corporations and non-profits, all with the same goal of educating the future. Education, STEM, and coding is a passion for us, not just a career. Here a just a few examples of those partnerships of passion.
+<div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
+Our common goal technology partnerships reach across a broad range of corporations and non-profits, all with the same goal of educating the future. Education, STEM, and coding is a passion for us, not just a career. Here are just a few examples.
 
 ---
 
@@ -99,3 +100,5 @@ EBM strongly values human development as it is critical to a country’s surviva
 ![Ballarpur](pathname:///img/partner-bit.png)
 
 Ballarpur Institute Of Technology(BIT) is a technical institution which is approved by AICTE (All India Council of Technical Education), New Delhi and has got the approval from Govt. of Maharashtra. BrainPad is designed to inspire and create future innovators.
+
+</div>
