--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -26,7 +26,7 @@ These devices are designed to be simple and affordable.
     <Button
     style={{ margin: "10px" }}
     label="Arcade V3"
-    link="arcade-v3"
+    link="arcade"
     />
 </td>
 <td>
