--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -16,32 +16,32 @@ import "react-medium-image-zoom/dist/styles.css";
 <div style={{ textAlign: "center" }}>
 
 <Zoom>
-<img alt="Main" width="75%" src="/img/catalog/arcade-v3-front.jpg" />
+<img alt="Main" width="75%" src="/img/catalog/arcade-v2-front.jpg" />
 </Zoom>
 
   <table>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v3-back.jpg" />
+        <img alt="Back" src="/img/catalog/arcade-v2-back.jpg" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/arcade-v3-clip.jpg" />
+        <img alt="Size" src="/img/catalog/arcade-v2-clip.jpg" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/arcade-v3-front45.jpg" />
+        <img alt="Front" src="/img/catalog/arcade-v2-front45.jpg" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v3-packaging.png" />
+        <img alt="Back" src="/img/catalog/arcade-v2-packaging.png" />
       </Zoom>
     </td>
   </table>
-  <p>**BrainPad Arcade V3 Microcomputer**</p>
+  <p>**BrainPad Arcade V2 Microcomputer**</p>
 </div>
 
 
@@ -51,6 +51,7 @@ import "react-medium-image-zoom/dist/styles.css";
 “Don’t just play games, make them” is the mentality behind BrainPad Arcade. With the full support of <strong>Microsoft MakeCode Arcade</strong>, users can build hundreds of arcade-style games. Go beyond games to use sensors and learn about circuits, or even build robots!
 <table><td width='50%'>
 **Key features**
+
 • Microsoft MakeCode Arcade Ready.<br/>
 • 1.8″ 160×120 Color Display.<br/>
 • Jacdac Connector.<br/>
@@ -115,7 +116,6 @@ The BrainPower backpack is another elegant option for powering BrainPad Arcade. 
   ## Ordering Info
 </p>
 
-| Description | Part Number | Price  |
-| ----------- | ----------- | ------ |
-| Arcade Gaming Microcomputer   | BPC-ARCADE-AR2B | $39.95 |
-
+| Description | Part Number | Price  | Buy
+| ----------- | ----------- | ------ | ---
+| Arcade Gaming Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
