--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -21,11 +21,11 @@ These devices are designed to be simple and affordable.
 <table>
 <td>
     <Zoom>
-    <img alt="arcade v3" src="/img/catalog/arcade-v3-front.jpg" />
+    <img alt="arcade" src="/img/catalog/arcade-v2-front.jpg" />
     </Zoom>
     <Button
     style={{ margin: "10px" }}
-    label="Arcade V3"
+    label="Arcade V2"
     link="arcade"
     />
 </td>
@@ -37,16 +37,6 @@ These devices are designed to be simple and affordable.
     style={{ margin: "10px" }}
     label="BrainPower"
     link="brainpower"
-    />
-</td>
-<td>
-    <Zoom>
-    <img alt="sensor kit" src="/img/catalog/arcade-v3-front.jpg" />
-    </Zoom>
-    <Button
-    style={{ margin: "10px" }}
-    label="Sensor Kit"
-    link="sensor-kit"
     />
 </td>
 </table>
