--- a/docs/resources/intro.mdx
+++ b/docs/resources/intro.mdx
@@ -6,7 +6,7 @@ pagination_prev: null
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Start Coding
+# Resources
 
 With the BrainPad's PLAY|CODE|EXCEL, we want student to "play" first. Let them enjoy the world of coding and, before they know it, they would find themselves building games and accessing the world of physical computing.
 
