--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,7 +13,7 @@ BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY
 
 <p
   style={{
-    backgroundColor: "orange",
+    backgroundColor: "Moccasin",
     color: "black",
     padding: "10px 0px 1px 0px",
   }}
@@ -21,6 +21,8 @@ BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY
 # PLAY | CODE | EXCEL
 </p>
 
+
+<code><i class="fa-solid fa-user"></i></code>
 
 
 Combining circuits in teaching allows learners to develop hands-on skills in addition to using critical thinking, logic, and analytics.
@@ -45,7 +47,7 @@ To give everyone the necessary skills required to understand the ever-growing ne
 
 ![About Mission](pathname:///img/about-mission.jpg)
 
-To make programming gratifying and accessible to all learners and educators.
+To empower educators in making programming gratifying and accessible to all learners.
 
 ---
 
