--- a/src/pages/events.mdx
+++ b/src/pages/events.mdx
@@ -5,7 +5,23 @@ hide_table_of_contents: true
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
-Our common goal technology partnerships reach across a broad range of corporations and non-profits, all with the same goal of educating the future. Education, STEM, and coding is a passion for us, not just a career. Here are just a few examples.
+<p
+  style={{
+    backgroundColor: "Moccasin",
+    color: "black",
+    padding: "10px 0px 1px 0px",
+  }}
+>
+# Let us be a part of your next STEM initiatives 
+<Button
+  style={{ margin: "10px" }}
+  label="About Us"
+  link="about"
+/>
+</p>
+
+These partnerships, with corporations and non-profits, are some of the examples of how we can help the next generations.<br/>
+Coding STEM is a passion for us!
 
 ---
 
