--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,20 +11,6 @@ We offer coding platform with an enhanced technological learning experience that
 
 BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY</strong>. Understanding <strong>CODE</strong> is essential to <strong>EXCEL</strong> in this digitally transformed era.
 
-<p
-  style={{
-    backgroundColor: "Moccasin",
-    color: "black",
-    padding: "10px 0px 1px 0px",
-  }}
->
-# PLAY | CODE | EXCEL
-</p>
-
-
-<code><i class="fa-solid fa-user"></i></code>
-
-
 Combining circuits in teaching allows learners to develop hands-on skills in addition to using critical thinking, logic, and analytics.
 
 <Button
@@ -35,19 +21,42 @@ Combining circuits in teaching allows learners to develop hands-on skills in add
 
 ---
 
+<p
+  style={{
+    backgroundColor: "Moccasin",
+    color: "black",
+    padding: "10px 0px 1px 0px",
+  }}
+>
 # Our Vision
+</p>
 
 ![About Vision](pathname:///img/about-vision.jpg)
 
 To give everyone the necessary skills required to understand the ever-growing need for smart-technologies in a digital STEM future.
 
----
 
+<p
+  style={{
+    backgroundColor: "Moccasin",
+    color: "black",
+    padding: "10px 0px 1px 0px",
+  }}
+>
 # Mission Statement
+</p>
+
 
 ![About Mission](pathname:///img/about-mission.jpg)
 
 To empower educators in making programming gratifying and accessible to all learners.
+
+<Button
+  style={{ margin: "10px" }}
+  label="Events"
+  link="events"
+/>
+
 
 ---
 
