--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -39,5 +39,15 @@ These devices are designed to be simple and affordable.
     link="brainpower"
     />
 </td>
+<td>
+    <Zoom>
+    <img alt="pulse" src="/img/catalog/pulse-front.png" />
+    </Zoom>
+    <Button
+    style={{ margin: "10px" }}
+    label="Pulse"
+    link="pulse"
+    />
+</td>
 </table>
 </div>
