--- a/docs/resources/makecode-arcade.mdx
+++ b/docs/resources/makecode-arcade.mdx
@@ -6,7 +6,7 @@ pagination_prev: null
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Block Coding
+# MakeCode Arcade
 
 Microsoft MakeCode Arcade goes hand in hand with BrainPad Arcade to create an exciting coding learning platform for building games. Not only that, it goes beyond games to build smart electronic systems with its connectivity options.
 
