--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -118,4 +118,4 @@ The BrainPower backpack is another elegant option for powering BrainPad Arcade. 
 
 | Description | Part Number | Price  | Buy
 | ----------- | ----------- | ------ | ---
-| Arcade Gaming Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
+| BrainPAd Arcade Microcomputer   | BPC-ARCADE-AR2B | $39.95 | <Button  style={{ margin: "10px" }}  label="Buy on Amazon"  link="https://www.amazon.com/dp/B0CL4ZCN53"/>
