--- a/docs/catalog/brainsense.mdx
+++ b/docs/catalog/brainsense.mdx
@@ -10,13 +10,12 @@ import React from "react";
 import Zoom from "react-medium-image-zoom";
 import "react-medium-image-zoom/dist/styles.css";
 
-# Arcade
-
+# BrainSense
 
 <div style={{ textAlign: "center" }}>
 
 <Zoom>
-<img alt="Main" width="75%" src="/img/catalog/arcade-v2-front.jpg" />
+<img alt="Main" width="75%" src="/img/catalog/brainsense-front45.png" />
 </Zoom>
 
   <table>
@@ -76,33 +75,6 @@ import "react-medium-image-zoom/dist/styles.css";
 </div>
 
 ---
-
-## MakeCode Arcade
-
-![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
-
-Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python.
-
----
-## Create and Play!
-
-![Falling Duck](pathname:///img/falling-duck.gif)
-
-Download finished games to the BrainPad Arcade over USB, and play them on the hand-held device.
-
-![Falling Duck Play](pathname:///img/arcade-duck-play.jpg)
-
----
-
-## Power On-the-go!
-
-BrainPad Arcade can be powered using any phone charger or power bank.
-
-image
-
-The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
-
-![Falling Duck Play](pathname:///img/catalog/brainpower-arcade-front45.jpg)
 
 ---
 
