--- a/docs/catalog/pulse.mdx
+++ b/docs/catalog/pulse.mdx
@@ -109,7 +109,7 @@ Alligator (crocodile) clip wires give the user an easy way to connect your Brain
 
 ---
 
-## Start Playing!
+## Start Playing ➡ coding!
 
 ![Pulse Display](pathname:///img/microsoft-makecode.png)
 
