--- a/docs/catalog/legacy.mdx
+++ b/docs/catalog/legacy.mdx
@@ -18,7 +18,15 @@ Technical support for these legacy device is limited!
 
 ![BrainPad Classic](pathname:///img/catalog/arcade-v1.jpg)
 
-BrainPad Arcade V1 was a joint effort with Microsoft MakeCode team, to be the very first MakeCode Arcade device on the market. All instructions are compatible with V1, except no DUELink and no Jacdac connections.
+BrainPad Arcade V1 was a joint effort with Microsoft MakeCode team, to be the very first MakeCode Arcade device on the market. 
+
+All instructions are compatible with V2, except no Jacdac connections. Use the BrainPad V2 page for instructions.
+
+<Button
+  style={{ margin: "10px" }}
+  label="BrainPad Arcade V2"
+  link="arcade"
+/>
 
 ---
 
@@ -26,10 +34,4 @@ BrainPad Arcade V1 was a joint effort with Microsoft MakeCode team, to be the ve
 
 ![BrainPad Classic](pathname:///img/catalog/classic.png)
 
-The BrainPad Classic brings all inputs and outputs on a single circuit board.
-
-<Button
-  style={{ margin: "10px" }}
-  label="BrainPad Classic"
-  link="classic"
-/>
+BrainPad Classic has served well for years but is no longer supported. Please consider new products. The MakeCode interface is hosted at [https://classic.brainpad.com/](https://classic.brainpad.com/) and will always be there but note that it no longer support project sharing.
