add classic image

--- a/docs/catalog/legacy.mdx
+++ b/docs/catalog/legacy.mdx
@@ -32,6 +32,6 @@ All instructions are compatible with V2, except no Jacdac connections. Use the B
 
 ## Classic
 
-![BrainPad Classic](pathname:///img/catalog/classic.png)
+![BrainPad Classic](pathname:///img/catalog/classic-front45.png)
 
 BrainPad Classic has served well for years but is no longer supported. Please consider new products. The MakeCode interface is hosted at [https://classic.brainpad.com/](https://classic.brainpad.com/) and will always be there but note that it no longer support project sharing.
