add kits to catalog intro

--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -14,7 +14,7 @@ import "react-medium-image-zoom/dist/styles.css";
 
 # Product Catalog
 
-These devices are designed to be simple and affordable.
+## Devices
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
@@ -23,6 +23,7 @@ These devices are designed to be simple and affordable.
     <Zoom>
     <img alt="arcade" src="/img/catalog/arcade-v2-front.jpg" />
     </Zoom>
+    Microcomputer with Color Screen 
     <Button
     style={{ margin: "10px" }}
     label="Arcade V2"
@@ -33,6 +34,7 @@ These devices are designed to be simple and affordable.
     <Zoom>
     <img alt="brainpower" src="/img/catalog/brainpower-front.png" />
     </Zoom>
+    Power Backpack
     <Button
     style={{ margin: "10px" }}
     label="BrainPower"
@@ -43,6 +45,7 @@ These devices are designed to be simple and affordable.
     <Zoom>
     <img alt="pulse" src="/img/catalog/pulse-front.png" />
     </Zoom>
+    Microcomputer with Edge Connector 
     <Button
     style={{ margin: "10px" }}
     label="Pulse"
@@ -50,4 +53,44 @@ These devices are designed to be simple and affordable.
     />
 </td>
 </table>
+
+</div>
+
+---
+
+## Pulse Kits
+
+
+
+<div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
+
+<table>
+<td>
+
+![Pulse Kits](pathname:///img/pulse-kits.png)
+Plu-and-Play Kits for BrainPad Pulse 
+<Button
+    style={{ margin: "10px" }}
+    label="Pulse Kits"
+    link="pulse-kits"
+    />
+</td>
+</table>
+
+</div>
+
+---
+
+# Perfected in the USA
+
+<div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
+
+![USA Flag](pathname:///img/usa-flag.png)
+
+We are proud to have perfected the BrainPad in our USA headquarters.
+<Button
+  style={{ margin: "10px" }}
+  label="About us"
+  link="/about"
+/>
 </div>
