--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -78,40 +78,62 @@ import "react-medium-image-zoom/dist/styles.css";
 
 ## MakeCode Arcade
 
-![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
+
+<div style={{ textAlign: "center" }}>
 
 Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python.
 
+![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
+
+Now you can **PLAY | CODE | EXCEL!**
+
+  <table>
+    <td>
+        <img alt="Front" src="/img/falling-duck.gif" />
+        
+        Use the online simulator today. No hardware is necessary!
+        
+    </td>
+    <td>
+        <img alt="Back" src="/img/arcade-duck-play.jpg" />
+        
+        Download finished games to the BrainPad Arcade.
+    
+    </td>
+  </table>
+
+</div>
+
 ---
-## Create and Play!
-
-![Falling Duck](pathname:///img/falling-duck.gif)
-
-Download finished games to the BrainPad Arcade over USB, and play them on the hand-held device.
-
-![Falling Duck Play](pathname:///img/arcade-duck-play.jpg)
-
----
-
 ## Power On-the-go!
 
 BrainPad Arcade can be powered using any phone charger or power bank.
 
-![Arcade + Brainpower](pathname:///img/catalog/brainpower-arcade.jpg)
+(image)
 
 The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
 
-![Falling Duck Play](pathname:///img/catalog/brainpower-arcade-front45.jpg)
+<div style={{ textAlign: "center" }}>
+
+  <table>
+    <td>
+        <img alt="BrainPower" src="/img/catalog/brainpower-arcade.jpg" />
+    </td>
+    <td>
+        <img alt="Arcade with BrainPower" src="/img/catalog/brainpower-arcade-front45.jpg" />
+    </td>
+  </table>
+
+</div>
 
 ---
 ## Getting Started
 
-**Easy Setup, Step-by-Step**
+Click below for a few resources to get you started. 
 
-Ready to connect your BrainPad to MakeCode Arcade and load your game? Click below for a simple, step-by-step guide to help you get started in no time.
 <Button
   style={{ margin: "10px" }}
-  label="MakeCode Arcade for the BrainPad"
+  label="MakeCode Arcade Resources"
   link="/docs/resources/makecode-arcade"
 />
 
