--- a/docs/resources/intro.mdx
+++ b/docs/resources/intro.mdx
@@ -9,3 +9,27 @@ import TabItem from "@theme/TabItem";
 # Resources
 
 With the BrainPad's PLAY|CODE|EXCEL, we want student to "play" first. Let them enjoy the world of coding and, before they know it, they would find themselves building games and accessing the world of physical computing.
+
+
+
+# Frequently Asked Questions
+
+<details>
+  <summary>FAQ 1</summary>
+
+  Hello World
+  
+</details>
+
+<details>
+  <summary>FAQ 2</summary>
+
+  Hello World
+  
+</details>
+<details>
+  <summary>FAQ 3</summary>
+
+  Hello World
+  
+</details>
