--- a/docs/resources/lessons/2d-adventure.mdx
+++ b/docs/resources/lessons/2d-adventure.mdx
@@ -1,60 +1,66 @@
-
-
-# 2D Adventure Series
+# 2D Adventure
 
 In this series we will create a 2D adventure type game. We’ll learn about creating Sprites, moving them, and using collision detection when Sprites overlap.
 
-![2d Adventure](pathname:///img/resources/makecode_arcade/2d_1.gif)
+![2d Adventure](pathname:///img/res/arcade/2d-adventure.gif)
 
-## Target Audience
-
-Anyone 13+ will find benefit from this series. Younger audience can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
-
-## Setup 
-
-You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work! You actually can use a tablet but that is not recommended.
-
-Having a BrainPad is optional but highly recommended. Making a game on a PC is fun, but nothing is more engaging to learners than taking the game they made and load it on a device they are holding in their hands.
+Target Audience: Anyone 13+ will find benefit from this series. Younger audience can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
 
 :::note
 These presentations have embedded videos. Make sure your setup is capable of showing the embedded videos. Also, do not forget about the notes inside the presentation.
 :::
 
+---
+
 ### 2D Adventure Episode 1
 
-![2d Adventure](pathname:///img/resources/makecode_arcade/2d_2.jpg)
+![2d Adventure](pathname:///img/res/arcade/2d_2.jpg)
 
 Creating, moving, and overlapping Sprites.
 
-{/* There is no link yet on either site */}
 <Button
   style={{ margin: "10px" }}
-  label="Episode 1"
-  link="" 
+  label="PDF"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep1.pdf"
 />
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep1.pptx"
+/>
+
 
 ### 2D Adventure Episode 2
 
-![2d Adventure](pathname:///img/resources/makecode_arcade/2d_3.jpg)
+![2d Adventure](pathname:///img/res/arcade/2d_3.jpg)
 
 Adding elements to make it a game
 
-{/* There is no link yet on either site */}
 <Button
   style={{ margin: "10px" }}
-  label="Episode 2"
-  link=""
+  label="PDF"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep2.pdf"
 />
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep2.pptx"
+/>
+
 
 ### 2D Adventure Episode 3
 
-![2d Adventure](pathname:///img/resources/makecode_arcade/2d_4.jpg)
+![2d Adventure](pathname:///img/res/arcade/2d_4.jpg)
 
 Adding a world map to our game
 
-{/* There is no link yet on either site */}
 <Button
   style={{ margin: "10px" }}
-  label="Episode 3"
-  link=""
+  label="PDF"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep3.pdf"
+/>
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/2d-adventure/2d-adventure-ep3.pptx"
 />
