--- a/docs/resources/lessons/space-shooter.mdx
+++ b/docs/resources/lessons/space-shooter.mdx
@@ -1,16 +1,19 @@
-# Space Shooter Series
+# Space Shooter
 
-In this series we will create a Space Shooter game. We’ll learn about adding Sprites, moving Sprites, creating projectiles, and collision detection between Sprites.
+In this series we will create a Space Shooter game. We'll learn about adding Sprites, moving Sprites, creating projectiles, and collision detection between Sprites.
 
-Target Audience: Anyone 13+ will find benefit from this series. Younger audience can still follow along when paired with an adult. An example can be a pops/grandchild STEM weekend event!
+![Space shooter](pathname:///img/res/arcade/space-shooter.gif)
 
-Setup: You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work! You actually can use a tablet but that is not recommended. Having a BrainPad is optional but highly recommended. Making a game on a PC is fun, but nothing is more engaging to learners than taking the game they made and load it on a device they are holding in their hands.
+Target Audience: Anyone 13+ will find benefit from this series. Younger audience can still follow along when paired with an adult.
+
 
 All lessons have to be done in a sequence but can be stopped at any lesson. All lessons are designed to be 20-min or learning and 40-min of lab/hands-on. See the Lesson Plans home page for details.
 
 :::note
-These presentations have embedded videos. Make sure your setup is capable of showing the embedded videos. Also be sure to look at the notes inside the presentation.
+These presentations have embedded videos. Make sure your setup is capable of showing the embedded videos. Also, be sure to look at the notes inside the presentation.
 :::
+
+---
 
 ## Lesson 1
 
@@ -28,8 +31,13 @@ Creating and moving Sprites. Adding projectiles.
 
 <Button
   style={{ margin: "10px" }}
-  label="PowerPoint PDF"
-  link="http://files.ghielectronics.com/downloads/BrainPad/Lessons/Space_Shooter/Space_Shooter-Episode1.pdf"
+  label="PDF"
+  link="pathname:///lesson/space/space-shooter-ep1.pdf"
+/>
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/space/space-shooter-ep1.pptx"
 />
 
 ## Lesson 2
@@ -48,8 +56,13 @@ Adding an enemy and collision detection to a game.
 
 <Button
   style={{ margin: "10px" }}
-  label="PowerPoint PDF"
-  link="http://files.ghielectronics.com/downloads/BrainPad/Lessons/Space_Shooter/Space_Shooter-Episode2.pdf"
+  label="PDF"
+  link="pathname:///lesson/space/space-shooter-ep2.pdf"
+/>
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/space/space-shooter-ep2.pptx"
 />
 
 ## Lesson 3
@@ -68,6 +81,11 @@ Make it a game. Add scoring, lives and effects.
 
 <Button
   style={{ margin: "10px" }}
-  label="PowerPoint PDF"
-  link="http://files.ghielectronics.com/downloads/BrainPad/Lessons/Space_Shooter/Space_Shooter-Episode3.pdf"
+  label="PDF"
+  link="pathname:///lesson/space/space-shooter-ep3.pdf"
+/>
+<Button
+  style={{ margin: "10px" }}
+  label="PowerPoint"
+  link="pathname:///lesson/space/space-shooter-ep3.pptx"
 />
