--- a/docs/resources/makecode-arcade.mdx
+++ b/docs/resources/makecode-arcade.mdx
@@ -17,7 +17,7 @@ Microsoft MakeCode Arcade goes hand in hand with BrainPad Arcade to create an ex
 
 ## Plug it in
 
-To get going with the BrainPad Arcade, let’s try programming it to show a pizza sprite on the screen. Go ahead and plug the BrainPad Arcade into your computer and follow the steps below.
+To get going with the BrainPad Arcade, let's try programming it to show a pizza sprite on the screen. Go ahead and plug the BrainPad Arcade into your computer and follow the steps below.
 
 ![USB Insert](pathname:///img/arcade-usb-insert.gif)
 
@@ -29,7 +29,7 @@ Then, click on Sprites and then drag the Set sprite block to the green “on sta
 
 ![Add Blocks](pathname:///img/arcade-add-blocks.gif)
 
-If the simulator is not “playing”, click the play button and now you will see the sprite you added in the middle of the simulator’s screen.
+If the simulator is not “playing”, click the play button and now you will see the sprite you added in the middle of the simulator's screen.
 
 ## Prep the Device
 
@@ -41,17 +41,15 @@ After you connected the BrainPad Arcade earlier, your PC should have detected a 
 
 Click download and save the file on the “ARCADE-F4” drive. The Green light will flash for a moment and the BrainPad will make the same sound you heard on the computer earlier. If you are using the Chrome browser, it is possible to sync the board so the file will download automatically to your board.
 
-If you are using the Chrome browser, you may get prompted to sync your device. This will allow to you to download the file directly onto the device.
-
 ---
-{/* In the Lessons should resize images some are too big */}
 
 ## Lessons
 
-The MakeCode Arcade platform already include several lessons and examples, but we also have our own!
+The [MakeCode Arcade platform](https://arcade.makecode.com/) already include several lessons and examples, but we also have our own!
 
 ### 2D Adventure
-![2D Adventure](pathname:///img/resources/makecode_arcade/ma_1.gif)
+
+![2D Adventure](pathname:///img/res/arcade/2d-adventure.gif)
 
 You only get 30 seconds to find the hamburger!
 
@@ -63,18 +61,23 @@ The lessons are PowerPoint presentations, and include animations.
   link="/docs/resources/lessons/2d-adventure"
 />
 
+---
+
 ### Space Shooter
-![Space shooter](pathname:///img/resources/makecode_arcade/ma_2.gif)
+
+![Space shooter](pathname:///img/res/arcade/space-shooter.gif)
 
 Shoot them all!
 
-The lessons include presentations, PDFs, and videos.
+The lessons include PowerPoint presentations, PDFs, and videos.
 
 <Button
   style={{ margin: "10px" }}
   label="Space Shooter"
   link="/docs/resources/lessons/space-shooter"
 />
+
+---
 
 ### Edge Connectors
 <img src="/img/resources/makecode_arcade/ma_3.png" alt="Edge connectors" style={{ width: "50%" }} />
