--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,7 +11,10 @@ We offer coding platform with an enhanced technological learning experience that
 
 BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY</strong>. Understanding <strong>CODE</strong> is essential to <strong>EXCEL</strong> in this digitally transformed era.
 
-Combining circuits in teaching allows learners to develop hands-on skills in addition to using critical thinking, logic, and analytics.
+![BrainPad Arcade](pathname:///img/catalog/arcade-v2-front.jpg)
+
+
+Using  circuits in teaching allows learners to develop hands-on skills in critical-thinking, logic, and analytics.
 
 <Button
   style={{ margin: "10px" }}
