--- a/src/pages/impact.mdx
+++ b/src/pages/impact.mdx
@@ -59,7 +59,18 @@ Excitement about technology continues beyond the classroom with BrainPad by enco
 
 The impact of the US-based BrainPad is proven in communities around the world. Inspiring students from different areas of expertise and age segments to create their best digital future. Whether students dream of a technological career or not, the BrainPad is useful in enhancing skills in math, critical thinking, creative problem-solving, and collaboration. The multi-faceted BrainPad exposes students to a diverse array of subjects and its affordability works with every budget and pocketbook, making it a beneficial solution for STEAM initiatives in schools and communities everywhere. Excel with BrainPad and help lead the future!
 
-“How many students haven’t we exposed to technology yet?”, asks BrainPad founder – Gus Issa, who believes: “Tomorrow’s greatest ideas will stem from the digital knowledge we plant today.”
+
+<p
+  style={{
+    backgroundColor: "orange",
+    color: "black",
+    padding: "0px 0px 0px 30px",
+  }}
+>
+
+"How many students haven’t we exposed to technology yet?", asks BrainPad founder – Gus Issa, who believes: Tomorrow’s greatest ideas will <strong>stem</strong> from the digital knowledge we plant today.
+</p>
+
 
 ---
 
