--- a/src/pages/events.mdx
+++ b/src/pages/events.mdx
@@ -15,6 +15,11 @@ hide_table_of_contents: true
 # Let us be a part of your next STEM initiatives 
 <Button
   style={{ margin: "10px" }}
+  label="Catalog"
+  link="/docs/catalog/intro"
+/>
+<Button
+  style={{ margin: "10px" }}
   label="About Us"
   link="about"
 />
